objects/adapps__OptimizerPlus_News_And_Twitter_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__FlexiPage__c</fullName>
        <label>FlexiPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__News_And_Twitter_Items__c</fullName>
        <label>News And Twitter</label>
        <referenceTo>adapps__OptimizerPlus_News_And_Twitter__c</referenceTo>
        <relationshipLabel>News And Twitter Items</relationshipLabel>
        <relationshipName>News_And_Twitter_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>News And Twitter Item</label>
    <nameField>
        <label>News And Twitter Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News And Twitter Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>